adding new java automation Project

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,2 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="e2d983">  <td>21/04/18 23:27:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LastMovieReleaseDetailPageTest.getallReleaseDetails(java.lang.String, java.lang.String)[pri:0, instance:VahakHybrid.IMDBautomationWeb.qa.TestSuite.LastMovieReleaseDetailPageTest@2aa3cd93]">getallReleaseDetails</td> 
+  <td>main@1797712197</td>   <td></td> </tr>
+<tr bgcolor="e2d983">  <td>21/04/18 23:27:09</td>   <td>-10220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LastMovieReleaseDetailPageTest.setup()[pri:0, instance:VahakHybrid.IMDBautomationWeb.qa.TestSuite.LastMovieReleaseDetailPageTest@2aa3cd93]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1797712197</td>   <td></td> </tr>
+<tr bgcolor="e2d983">  <td>21/04/18 23:27:33</td>   <td>13906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LastMovieReleaseDetailPageTest.setup()[pri:0, instance:VahakHybrid.IMDBautomationWeb.qa.TestSuite.LastMovieReleaseDetailPageTest@2aa3cd93]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1797712197</td>   <td></td> </tr>
+<tr bgcolor="e2d983">  <td>21/04/18 23:27:33</td>   <td>13752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LastMovieReleaseDetailPageTest.tearDown()[pri:0, instance:VahakHybrid.IMDBautomationWeb.qa.TestSuite.LastMovieReleaseDetailPageTest@2aa3cd93]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1797712197</td>   <td></td> </tr>
+<tr bgcolor="e2d983">  <td>21/04/18 23:28:12</td>   <td>52957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LastMovieReleaseDetailPageTest.tearDown()[pri:0, instance:VahakHybrid.IMDBautomationWeb.qa.TestSuite.LastMovieReleaseDetailPageTest@2aa3cd93]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1797712197</td>   <td></td> </tr>
+<tr bgcolor="e2d983">  <td>21/04/18 23:27:42</td>   <td>22623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LastMovieReleaseDetailPageTest.testTitleLastMovieReleaseDetailPage(java.lang.String, java.lang.String)[pri:0, instance:VahakHybrid.IMDBautomationWeb.qa.TestSuite.LastMovieReleaseDetailPageTest@2aa3cd93]">testTitleLastMovieReleaseDetailPage</td> 
+  <td>main@1797712197</td>   <td></td> </tr>
 </table>
